@@ -1,7 +1,6 @@
 package com.barnacle;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.apache.commons.lang3.tuple.Pair;
 
@@ -10,7 +9,7 @@ public class Utils {
   public static <T> List<Pair<User, T>> addUser(List<T> list, User user) {
     return list.stream()
         .map(element -> Pair.of(user, element))
-        .collect(Collectors.toList());
+        .toList();
   }
 
 }
