@@ -12,7 +12,6 @@ import java.util.List;
 import java.util.Locale;
 import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import javax.xml.parsers.DocumentBuilder;
@@ -83,7 +82,7 @@ public class GoodreadsBookEtl extends Etl<GoodreadsBook> {
                     .build();
               });
         })
-        .collect(Collectors.toList());
+        .toList();
   }
 
   @VisibleForTesting
