@@ -1,7 +1,6 @@
 package com.robertsanek.util;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.apache.commons.lang3.StringUtils;
 
@@ -10,7 +9,7 @@ public class Lists {
   public static List<String> quoteListItems(List<String> list) {
     return list.stream()
         .map(item -> String.format("\"%s\"", item))
-        .collect(Collectors.toList());
+        .toList();
   }
 
   public static String quoteListItemsAndJoinWithComma(List<String> list) {
